# dbuddy

./: .gitignore  autogen.sh  configure.ac  dbuddy.spec
src/: Makefile.am  main.cpp  main.h  page_amulets.h  page_base.cpp  page_base.h  page_boots.h  page_cloaks.h  page_gloves.h  page_helmets.h  page_intrinsics.h  page_level1.h  page_level2.h  page_main.cpp  page_main.h  page_map.cpp  page_map.h  page_potions.h  page_rings.h  page_scrolls.h  page_spellbooks.h  page_splash.cpp  page_splash.h  page_wands.h  sorter.pl  storage.cpp  storage.h
