AM_CXXFLAGS=$(NCURSES_CFLAGS)

bin_PROGRAMS = dbuddy
dbuddy_LDADD = $(NCURSES_LIBS)
dbuddy_SOURCES = main.h main.cpp \
	page_base.h page_base.cpp \
	page_main.h page_main.cpp \
	page_map.h page_map.cpp \
	storage.h storage.cpp \
	\
	page_level1.h \
	page_level2.h \
	page_intrinsics.h \
	\
	page_amulets.h \
	page_boots.h \
	page_cloaks.h \
	page_gloves.h \
	page_helmets.h \
	page_potions.h \
	page_rings.h \
	page_scrolls.h \
	page_spellbooks.h \
	page_wands.h
